Add slides on value imputation in datasets for random forests

--- a/Machine_Learning_Random_Forests/Hands_On_Decision_Trees_And_Random_Forests.Rmd
+++ b/Machine_Learning_Random_Forests/Hands_On_Decision_Trees_And_Random_Forests.Rmd
@@ -34,7 +34,7 @@ library(party)
 
 ```
 
-
+P.S. During intermediary partitioning, if the node has the lowest Gini Index, it becomes leaf node. That will most likely be the case when all remaining non-root nodes have been exhausted, checking for impurity score.
 
 All workshop study material is available at my github page [@mygithub].
 
