Add RFECS reference to bibliography

--- a/Machine_Learning_Random_Forests/citations.bib
+++ b/Machine_Learning_Random_Forests/citations.bib
@@ -27,3 +27,18 @@ year = {2005}
 	author = {Jauhari, Shaurya},
 	title = {{My Github Repository}}
 }
+
+@article{Rajagopal2013,
+abstract = {Transcriptional enhancers play critical roles in regulation of gene expression, but their identification in the eukaryotic genome has been challenging. Recently, it was shown that enhancers in the mammalian genome are associated with characteristic histone modification patterns, which have been increasingly exploited for enhancer identification. However, only a limited number of cell types or chromatin marks have previously been investigated for this purpose, leaving the question unanswered whether there exists an optimal set of histone modifications for enhancer prediction in different cell types. Here, we address this issue by exploring genome-wide profiles of 24 histone modifications in two distinct human cell types, embryonic stem cells and lung fibroblasts. We developed a Random-Forest based algorithm, RFECS (Random Forest based Enhancer identification from Chromatin States) to integrate histone modification profiles for identification of enhancers, and used it to identify enhancers in a number of cell-types. We show that RFECS not only leads to more accurate and precise prediction of enhancers than previous methods, but also helps identify the most informative and robust set of three chromatin marks for enhancer prediction.},
+author = {Rajagopal, Nisha and Xie, Wei and Li, Yan and Wagner, Uli and Wang, Wei and Stamatoyannopoulos, John and Ernst, Jason and Kellis, Manolis and Ren, Bing},
+doi = {10.1371/journal.pcbi.1002968},
+file = {:home/postdoc1/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Rajagopal et al. - 2013 - RFECS A Random-Forest Based Algorithm for Enhancer Identification from Chromatin State(2).pdf:pdf},
+issn = {1553734X},
+journal = {PLoS Computational Biology},
+mendeley-groups = {Mora Lab{\_}GMU},
+number = {3},
+title = {{RFECS: A Random-Forest Based Algorithm for Enhancer Identification from Chromatin State}},
+volume = {9},
+year = {2013}
+}
+
