--- a/Machine_Learning_Deep_Learning/enhancer_prediction_dataset_protocol.ipynb
+++ b/Machine_Learning_Deep_Learning/enhancer_prediction_dataset_protocol.ipynb
@@ -1194,20 +1194,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\n",
-      "Attaching package: ‘Matrix’\n",
-      "\n",
-      "The following object is masked from ‘package:S4Vectors’:\n",
-      "\n",
-      "    expand\n",
-      "\n",
       "Warning message in eval(expr, envir, enclos):\n",
       "“NAs introduced by coercion”Warning message in eval(expr, envir, enclos):\n",
       "“NAs introduced by coercion”Warning message in eval(expr, envir, enclos):\n",
@@ -1230,9 +1223,11 @@
     "final_sparse_data$peaks_h3k4me2 <- as.numeric(final_sparse_data$peaks_h3k4me2)\n",
     "final_sparse_data$peaks_h3k4me1 <- as.numeric(final_sparse_data$peaks_h3k4me1)\n",
     "\n",
+    "final_sparse_data <- final_sparse_data[complete.cases(final_sparse_data), ]\n",
+    "\n",
     "## Converting data frame to matrix and then to sparse matrix.\n",
-    "final_sparse_data <- data.matrix(final_sparse_data)\n",
-    "final_sparse_data <- Matrix(final_sparse_data, sparse=TRUE)"
+    "final_sparse_data_matrix <- data.matrix(final_sparse_data)\n",
+    "final_sparse_data_matrix <- Matrix(final_sparse_data_matrix, sparse=TRUE)"
    ]
   },
   {
@@ -1244,20 +1239,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<table>\n",
+       "<caption>A data.frame: 6 × 5</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>peaks_h3k27ac</th><th scope=col>peaks_h3k4me3</th><th scope=col>peaks_h3k4me2</th><th scope=col>peaks_h3k4me1</th><th scope=col>class</th></tr>\n",
+       "\t<tr><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>0</td><td>0</td><td>0</td><td>0</td><td>1</td></tr>\n",
+       "\t<tr><td>0</td><td>0</td><td>0</td><td>0</td><td>1</td></tr>\n",
+       "\t<tr><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td></tr>\n",
+       "\t<tr><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td></tr>\n",
+       "\t<tr><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td></tr>\n",
+       "\t<tr><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A data.frame: 6 × 5\n",
+       "\\begin{tabular}{r|lllll}\n",
+       " peaks\\_h3k27ac & peaks\\_h3k4me3 & peaks\\_h3k4me2 & peaks\\_h3k4me1 & class\\\\\n",
+       " <dbl> & <dbl> & <dbl> & <dbl> & <dbl>\\\\\n",
+       "\\hline\n",
+       "\t 0 & 0 & 0 & 0 & 1\\\\\n",
+       "\t 0 & 0 & 0 & 0 & 1\\\\\n",
+       "\t 0 & 0 & 0 & 0 & 0\\\\\n",
+       "\t 0 & 0 & 0 & 0 & 0\\\\\n",
+       "\t 0 & 0 & 0 & 0 & 0\\\\\n",
+       "\t 0 & 0 & 0 & 0 & 0\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A data.frame: 6 × 5\n",
+       "\n",
+       "| peaks_h3k27ac &lt;dbl&gt; | peaks_h3k4me3 &lt;dbl&gt; | peaks_h3k4me2 &lt;dbl&gt; | peaks_h3k4me1 &lt;dbl&gt; | class &lt;dbl&gt; |\n",
+       "|---|---|---|---|---|\n",
+       "| 0 | 0 | 0 | 0 | 1 |\n",
+       "| 0 | 0 | 0 | 0 | 1 |\n",
+       "| 0 | 0 | 0 | 0 | 0 |\n",
+       "| 0 | 0 | 0 | 0 | 0 |\n",
+       "| 0 | 0 | 0 | 0 | 0 |\n",
+       "| 0 | 0 | 0 | 0 | 0 |\n",
+       "\n"
+      ],
       "text/plain": [
-       "6 x 5 sparse Matrix of class \"dgCMatrix\"\n",
-       "     peaks_h3k27ac peaks_h3k4me3 peaks_h3k4me2 peaks_h3k4me1 class\n",
-       "[1,]             .             .             .             .     1\n",
-       "[2,]             .             .             .             .     1\n",
-       "[3,]             .             .             .             .     .\n",
-       "[4,]             .             .             .             .     .\n",
-       "[5,]             .             .             .             .     .\n",
-       "[6,]             .             .             .             .     ."
+       "  peaks_h3k27ac peaks_h3k4me3 peaks_h3k4me2 peaks_h3k4me1 class\n",
+       "1 0             0             0             0             1    \n",
+       "2 0             0             0             0             1    \n",
+       "3 0             0             0             0             0    \n",
+       "4 0             0             0             0             0    \n",
+       "5 0             0             0             0             0    \n",
+       "6 0             0             0             0             0    "
       ]
      },
      "metadata": {},
@@ -1267,7 +1306,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "412.7 Mb\n"
+      "830.4 Mb\n"
      ]
     }
    ],
