--- a/Machine_Learning_Deep_Learning/hands_on_deep_learning_ep.ipynb
+++ b/Machine_Learning_Deep_Learning/hands_on_deep_learning_ep.ipynb
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
      "text": [
       "\n",
       "The downloaded binary packages are in\n",
-      "\t/var/folders/hm/c3_fjypn62v5xh5b5ygv267m0000gn/T//Rtmps3io0e/downloaded_packages\n"
+      "\t/var/folders/hm/c3_fjypn62v5xh5b5ygv267m0000gn/T//Rtmp8FwEPm/downloaded_packages\n"
      ]
     }
    ],
@@ -171,144 +171,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "'data.frame':\t1000000 obs. of  10 variables:\n",
-      " $ seqnames     : Factor w/ 146 levels \"chr1\",\"chr10\",..: 13 19 23 12 11 4 5 22 19 18 ...\n",
-      " $ start        : int  19326111 106384793 24613852 33385024 15763072 110285162 52575071 8976919 26293029 134548936 ...\n",
-      " $ end          : int  19326146 106384849 24613887 33385059 15763100 110285197 52575106 8976960 26293064 134548986 ...\n",
-      " $ width        : int  36 57 36 36 29 36 36 42 36 51 ...\n",
-      " $ strand       : Factor w/ 3 levels \"+\",\"-\",\"*\": 3 3 3 3 3 3 3 3 3 3 ...\n",
-      " $ class        : chr  \"Non-Enhancer\" \"Non-Enhancer\" \"Non-Enhancer\" \"Non-Enhancer\" ...\n",
+      "'data.frame':\t19789955 obs. of  5 variables:\n",
       " $ peaks_h3k27ac: num  0 0 0 0 0 0 0 0 0 0 ...\n",
       " $ peaks_h3k4me3: num  0 0 0 0 0 0 0 0 0 0 ...\n",
       " $ peaks_h3k4me2: num  0 0 0 0 0 0 0 0 0 0 ...\n",
-      " $ peaks_h3k4me1: num  0 0 0 0 0 0 0 0 0 0 ...\n"
+      " $ peaks_h3k4me1: num  0 0 0 0 0 0 0 0 0 0 ...\n",
+      " $ class        : num  1 1 0 0 0 0 0 0 1 0 ...\n"
      ]
     }
    ],
    "source": [
     "## Let us consider our example dataset\n",
-    "d <- readRDS(\"./data/ep_data_sample.rds\")\n",
+    "d <- readRDS(\"./data/ep_data.rds\")\n",
     "str(d)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "A requisite for the class definition for a deep learning model is that it has to be numeric by datatype. Let's do that here."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 88,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "'data.frame':\t1000000 obs. of  10 variables:\n",
-      " $ seqnames     : Factor w/ 146 levels \"chr1\",\"chr10\",..: 13 19 23 12 11 4 5 22 19 18 ...\n",
-      " $ start        : int  19326111 106384793 24613852 33385024 15763072 110285162 52575071 8976919 26293029 134548936 ...\n",
-      " $ end          : int  19326146 106384849 24613887 33385059 15763100 110285197 52575106 8976960 26293064 134548986 ...\n",
-      " $ width        : int  36 57 36 36 29 36 36 42 36 51 ...\n",
-      " $ strand       : Factor w/ 3 levels \"+\",\"-\",\"*\": 3 3 3 3 3 3 3 3 3 3 ...\n",
-      " $ class        : num  1 1 1 1 0 1 0 1 0 1 ...\n",
-      " $ peaks_h3k27ac: num  0 0 0 0 0 0 0 0 0 0 ...\n",
-      " $ peaks_h3k4me3: num  0 0 0 0 0 0 0 0 0 0 ...\n",
-      " $ peaks_h3k4me2: num  0 0 0 0 0 0 0 0 0 0 ...\n",
-      " $ peaks_h3k4me1: num  0 0 0 0 0 0 0 0 0 0 ...\n"
-     ]
-    }
-   ],
-   "source": [
-    "d$class <- as.numeric(as.factor(d$class))-1\n",
-    "str(d)\n",
-    "d <- d[complete.cases(d),]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 89,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "<caption>A data.frame: 6 × 10</caption>\n",
-       "<thead>\n",
-       "\t<tr><th></th><th scope=col>seqnames</th><th scope=col>start</th><th scope=col>end</th><th scope=col>width</th><th scope=col>strand</th><th scope=col>class</th><th scope=col>peaks_h3k27ac</th><th scope=col>peaks_h3k4me3</th><th scope=col>peaks_h3k4me2</th><th scope=col>peaks_h3k4me1</th></tr>\n",
-       "\t<tr><th></th><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
-       "</thead>\n",
-       "<tbody>\n",
-       "\t<tr><th scope=row>9242760</th><td>chr20</td><td> 19326111</td><td> 19326146</td><td>36</td><td>*</td><td>1</td><td>0</td><td>0</td><td>0</td><td>0</td></tr>\n",
-       "\t<tr><th scope=row>13927262</th><td>chr6 </td><td>106384793</td><td>106384849</td><td>57</td><td>*</td><td>1</td><td>0</td><td>0</td><td>0</td><td>0</td></tr>\n",
-       "\t<tr><th scope=row>16955693</th><td>chrX </td><td> 24613852</td><td> 24613887</td><td>36</td><td>*</td><td>1</td><td>0</td><td>0</td><td>0</td><td>0</td></tr>\n",
-       "\t<tr><th scope=row>7883897</th><td>chr2 </td><td> 33385024</td><td> 33385059</td><td>36</td><td>*</td><td>1</td><td>0</td><td>0</td><td>0</td><td>0</td></tr>\n",
-       "\t<tr><th scope=row>7368608</th><td>chr19</td><td> 15763072</td><td> 15763100</td><td>29</td><td>*</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td></tr>\n",
-       "\t<tr><th scope=row>3836119</th><td>chr12</td><td>110285162</td><td>110285197</td><td>36</td><td>*</td><td>1</td><td>0</td><td>0</td><td>0</td><td>0</td></tr>\n",
-       "</tbody>\n",
-       "</table>\n"
-      ],
-      "text/latex": [
-       "A data.frame: 6 × 10\n",
-       "\\begin{tabular}{r|llllllllll}\n",
-       "  & seqnames & start & end & width & strand & class & peaks\\_h3k27ac & peaks\\_h3k4me3 & peaks\\_h3k4me2 & peaks\\_h3k4me1\\\\\n",
-       "  & <fct> & <int> & <int> & <int> & <fct> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl>\\\\\n",
-       "\\hline\n",
-       "\t9242760 & chr20 &  19326111 &  19326146 & 36 & * & 1 & 0 & 0 & 0 & 0\\\\\n",
-       "\t13927262 & chr6  & 106384793 & 106384849 & 57 & * & 1 & 0 & 0 & 0 & 0\\\\\n",
-       "\t16955693 & chrX  &  24613852 &  24613887 & 36 & * & 1 & 0 & 0 & 0 & 0\\\\\n",
-       "\t7883897 & chr2  &  33385024 &  33385059 & 36 & * & 1 & 0 & 0 & 0 & 0\\\\\n",
-       "\t7368608 & chr19 &  15763072 &  15763100 & 29 & * & 0 & 0 & 0 & 0 & 0\\\\\n",
-       "\t3836119 & chr12 & 110285162 & 110285197 & 36 & * & 1 & 0 & 0 & 0 & 0\\\\\n",
-       "\\end{tabular}\n"
-      ],
-      "text/markdown": [
-       "\n",
-       "A data.frame: 6 × 10\n",
-       "\n",
-       "| <!--/--> | seqnames &lt;fct&gt; | start &lt;int&gt; | end &lt;int&gt; | width &lt;int&gt; | strand &lt;fct&gt; | class &lt;dbl&gt; | peaks_h3k27ac &lt;dbl&gt; | peaks_h3k4me3 &lt;dbl&gt; | peaks_h3k4me2 &lt;dbl&gt; | peaks_h3k4me1 &lt;dbl&gt; |\n",
-       "|---|---|---|---|---|---|---|---|---|---|---|\n",
-       "| 9242760 | chr20 |  19326111 |  19326146 | 36 | * | 1 | 0 | 0 | 0 | 0 |\n",
-       "| 13927262 | chr6  | 106384793 | 106384849 | 57 | * | 1 | 0 | 0 | 0 | 0 |\n",
-       "| 16955693 | chrX  |  24613852 |  24613887 | 36 | * | 1 | 0 | 0 | 0 | 0 |\n",
-       "| 7883897 | chr2  |  33385024 |  33385059 | 36 | * | 1 | 0 | 0 | 0 | 0 |\n",
-       "| 7368608 | chr19 |  15763072 |  15763100 | 29 | * | 0 | 0 | 0 | 0 | 0 |\n",
-       "| 3836119 | chr12 | 110285162 | 110285197 | 36 | * | 1 | 0 | 0 | 0 | 0 |\n",
-       "\n"
-      ],
-      "text/plain": [
-       "         seqnames start     end       width strand class peaks_h3k27ac\n",
-       "9242760  chr20     19326111  19326146 36    *      1     0            \n",
-       "13927262 chr6     106384793 106384849 57    *      1     0            \n",
-       "16955693 chrX      24613852  24613887 36    *      1     0            \n",
-       "7883897  chr2      33385024  33385059 36    *      1     0            \n",
-       "7368608  chr19     15763072  15763100 29    *      0     0            \n",
-       "3836119  chr12    110285162 110285197 36    *      1     0            \n",
-       "         peaks_h3k4me3 peaks_h3k4me2 peaks_h3k4me1\n",
-       "9242760  0             0             0            \n",
-       "13927262 0             0             0            \n",
-       "16955693 0             0             0            \n",
-       "7883897  0             0             0            \n",
-       "7368608  0             0             0            \n",
-       "3836119  0             0             0            "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "head(d)"
    ]
   },
   {
@@ -332,18 +214,18 @@
    "outputs": [],
    "source": [
     "# Min-Max normalization\n",
-    "#d$peaks_h3k27ac <- (d$peaks_h3k27ac-min(d$peaks_h3k27ac, na.rm = T))/(max(d$peaks_h3k27ac, na.rm = T)-min(d$peaks_h3k27ac, na.rm = T))\n",
-    "#d$peaks_h3k4me3 <- (d$peaks_h3k4me3-min(d$peaks_h3k4me3, na.rm = T))/(max(d$peaks_h3k4me3, na.rm = T)-min(d$peaks_h3k4me3, na.rm = T))\n",
-    "#d$peaks_h3k4me2 <- (d$peaks_h3k4me2-min(d$peaks_h3k4me2, na.rm = T))/(max(d$peaks_h3k4me2, na.rm = T)-min(d$peaks_h3k4me2, na.rm = T))\n",
-    "#d$peaks_h3k4me1 <- (d$peaks_h3k4me1-min(d$peaks_h3k4me1, na.rm = T))/(max(d$peaks_h3k4me1, na.rm = T)-min(d$peaks_h3k4me1, na.rm = T))\n",
+    "d$peaks_h3k27ac <- (d$peaks_h3k27ac-min(d$peaks_h3k27ac, na.rm = T))/(max(d$peaks_h3k27ac, na.rm = T)-min(d$peaks_h3k27ac, na.rm = T))\n",
+    "d$peaks_h3k4me3 <- (d$peaks_h3k4me3-min(d$peaks_h3k4me3, na.rm = T))/(max(d$peaks_h3k4me3, na.rm = T)-min(d$peaks_h3k4me3, na.rm = T))\n",
+    "d$peaks_h3k4me2 <- (d$peaks_h3k4me2-min(d$peaks_h3k4me2, na.rm = T))/(max(d$peaks_h3k4me2, na.rm = T)-min(d$peaks_h3k4me2, na.rm = T))\n",
+    "d$peaks_h3k4me1 <- (d$peaks_h3k4me1-min(d$peaks_h3k4me1, na.rm = T))/(max(d$peaks_h3k4me1, na.rm = T)-min(d$peaks_h3k4me1, na.rm = T))\n",
     "\n",
     "\n",
     "\n",
     "# Z-Score normalization\n",
-    "d$peaks_h3k27ac <- as.numeric((d$peaks_h3k27ac - mean(d$peaks_h3k27ac)) / sd(d$peaks_h3k27ac))\n",
-    "d$peaks_h3k4me1 <- as.numeric((d$peaks_h3k4me1 - mean(d$peaks_h3k4me1)) / sd(d$peaks_h3k4me1))\n",
-    "d$peaks_h3k4me2 <- as.numeric((d$peaks_h3k4me2 - mean(d$peaks_h3k4me2)) / sd(d$peaks_h3k4me2))\n",
-    "d$peaks_h3k4me3 <- as.numeric((d$peaks_h3k4me3 - mean(d$peaks_h3k4me3)) / sd(d$peaks_h3k4me3))"
+    "#d$peaks_h3k27ac <- as.numeric((d$peaks_h3k27ac - mean(d$peaks_h3k27ac)) / sd(d$peaks_h3k27ac))\n",
+    "#d$peaks_h3k4me1 <- as.numeric((d$peaks_h3k4me1 - mean(d$peaks_h3k4me1)) / sd(d$peaks_h3k4me1))\n",
+    "#d$peaks_h3k4me2 <- as.numeric((d$peaks_h3k4me2 - mean(d$peaks_h3k4me2)) / sd(d$peaks_h3k4me2))\n",
+    "#d$peaks_h3k4me3 <- as.numeric((d$peaks_h3k4me3 - mean(d$peaks_h3k4me3)) / sd(d$peaks_h3k4me3))"
    ]
   },
   {
@@ -355,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,22 +272,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "ename": "ERROR",
-     "evalue": "Error: the error derivative contains a NA; varify that the derivative function does not divide by 0 (e.g. cross entropy)\n",
+     "evalue": "Error in neuralnet(class ~ peaks_h3k27ac + peaks_h3k4me3 + peaks_h3k4me2 + : could not find function \"neuralnet\"\n",
      "output_type": "error",
      "traceback": [
-      "Error: the error derivative contains a NA; varify that the derivative function does not divide by 0 (e.g. cross entropy)\nTraceback:\n",
-      "1. neuralnet(class ~ peaks_h3k27ac + peaks_h3k4me3 + peaks_h3k4me2 + \n .     peaks_h3k4me1, data = training, hidden = 5, err.fct = \"ce\", \n .     act.fct = \"logistic\", linear.output = FALSE)",
-      "2. lapply(1:rep, function(i) {\n .     if (lifesign != \"none\") {\n .         lifesign <- display(hidden, threshold, rep, i, lifesign)\n .     }\n .     calculate.neuralnet(learningrate.limit = learningrate.limit, \n .         learningrate.factor = learningrate.factor, covariate = covariate, \n .         response = response, data = data, model.list = model.list, \n .         threshold = threshold, lifesign.step = lifesign.step, \n .         stepmax = stepmax, hidden = hidden, lifesign = lifesign, \n .         startweights = startweights, algorithm = algorithm, err.fct = err.fct, \n .         err.deriv.fct = err.deriv.fct, act.fct = act.fct, act.deriv.fct = act.deriv.fct, \n .         rep = i, linear.output = linear.output, exclude = exclude, \n .         constant.weights = constant.weights, likelihood = likelihood, \n .         learningrate.bp = learningrate)\n . })",
-      "3. FUN(X[[i]], ...)",
-      "4. calculate.neuralnet(learningrate.limit = learningrate.limit, \n .     learningrate.factor = learningrate.factor, covariate = covariate, \n .     response = response, data = data, model.list = model.list, \n .     threshold = threshold, lifesign.step = lifesign.step, stepmax = stepmax, \n .     hidden = hidden, lifesign = lifesign, startweights = startweights, \n .     algorithm = algorithm, err.fct = err.fct, err.deriv.fct = err.deriv.fct, \n .     act.fct = act.fct, act.deriv.fct = act.deriv.fct, rep = i, \n .     linear.output = linear.output, exclude = exclude, constant.weights = constant.weights, \n .     likelihood = likelihood, learningrate.bp = learningrate)",
-      "5. rprop(weights = weights, threshold = threshold, response = response, \n .     covariate = covariate, learningrate.limit = learningrate.limit, \n .     learningrate.factor = learningrate.factor, stepmax = stepmax, \n .     lifesign = lifesign, lifesign.step = lifesign.step, act.fct = act.fct, \n .     act.deriv.fct = act.deriv.fct, err.fct = err.fct, err.deriv.fct = err.deriv.fct, \n .     algorithm = algorithm, linear.output = linear.output, exclude = exclude, \n .     learningrate.bp = learningrate.bp)",
-      "6. calculate.gradients(weights = weights, length.weights = length.weights, \n .     neurons = result$neurons, neuron.deriv = result$neuron.deriv, \n .     err.deriv = err.deriv, exclude = exclude, linear.output = linear.output)",
-      "7. stop(\"the error derivative contains a NA; varify that the derivative function does not divide by 0 (e.g. cross entropy)\", \n .     call. = FALSE)"
+      "Error in neuralnet(class ~ peaks_h3k27ac + peaks_h3k4me3 + peaks_h3k4me2 + : could not find function \"neuralnet\"\nTraceback:\n"
      ]
     }
    ],
